<resources>
    <string name="app_name">Three Squares</string>
    <string name="play_again">Play Again</string>
    <string name="back_home">HOME</string>
    <string name="click_to_play">Click To Play</string>
    <string name="settings">Settings</string>
    <string name="exit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="win">WIN</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="threemovesleft">3 Moves Left</string>
    <string name="onemovesleft">1 Move Left</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">Coming Soon...</string>
</resources>