<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainGameLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainGame"
    android:orientation="vertical"
    android:background="@color/player1background"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/boardToolbarGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/player1name">

        <LinearLayout
            android:id="@+id/descriptionGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/player1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/moveLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="10sp"
                android:text="@string/threemovesleft"/>
        </LinearLayout>


        <TextView
            android:id="@+id/timerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:drawableStart="@drawable/ic_baseline_timer_24"
            android:gravity="center"
            android:textSize="10sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="#00C67D22"
            android:onClick="exitAlert"
            android:text="@string/exit"
            android:textColor="@color/black" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/gameBorder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/green_border"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/gameContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>


</LinearLayout>